[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/Characters/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy_assets/enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.3443, 4.66405 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0.0395012, 0.0394993 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 0, -47 )
texture = ExtResource( 2 )

[node name="EnemyCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -0.145483 )
polygon = PoolVector2Array( 24.5685, -0.0491543, -26.4057, -0.00842094, -38.3118, -4.74683, -42.829, -6.94439, -47.3463, -11.3395, -51.3296, -17.7824, -53.6492, -25.1075, -53.9567, -35.1967, -52.9286, -43.9356, -48.9727, -56.5067, -42.2445, -68.6036, -32.2341, -81.049, -25.4104, -85.1204, 26.108, -85.3454, 31.4317, -80.9609, 39.5858, -72.1107, 44.8301, -63.9835, 49.842, -53.9595, 53.3119, -41.6223, 53.8259, -28.8996, 52.8926, -20.6972, 48.7227, -12.871, 42.1283, -6.90459, 34.0684, -3.03165 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 0.790793, 0.429871 )
rect = Rect2( -68, -220, 137, 220 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( -0.047267, -85.0193 )
collision_layer = 2

[node name="StompCollision" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -0.201651, -7.5955 )
shape = SubResource( 1 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
